fix on spacing bug fix in elastic agents page

--- a/source/assets/stylesheets/components/_flex-item.scss
+++ b/source/assets/stylesheets/components/_flex-item.scss
@@ -43,24 +43,26 @@
 
 .gird-col-6 {
   @include grid-column(12);
-
   @media (min-width: $screen-lg) {
+    @include grid-column(6);
+  }
+}
+
+.gird-col-6_mobile {
+  @include grid-column(12);
+  @media (min-width: $screen-md) {
     @include grid-column(6);
   }
 }
 
 .grid-shift {
   @include grid-column(12);
-  @include grid-push(0);
-  @include grid-shift(0);
-  // @include grid-visual;
   float: none;
 
   @media (min-width: $screen-lg) {
     @include grid-column(8);
     @include grid-push(1);
     @include grid-shift(1);
-    // @include grid-visual;
     float: none;
   }
 }
